traces/bug_509.txt
examples++-load/Curvature.cpp:531: error: DEAD_STORE
  The value written to &nv (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Curvature.cpp:531:5: Write of unused value
529.       double l[2];
530.       double m[3]={a11,a12,a22};
531.       int nv=eigen2(m,l,vp);
           ^
532.       return max(fabs(l[0]-l[1]),max(fabs(l[0]),fabs(l[1])));
533.   }
